{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 22,
  "lineage": "b2333bb6-6b0d-bbff-bca0-742096edd25f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d425805aef71788",
            "arn": "arn:aws:ec2:us-east-1:038157383258:instance/i-0eb5071d0250a7014",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eb5071d0250a7014",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b174a27acd678049",
            "private_dns": "ip-192-168-27-53.ec2.internal",
            "private_ip": "192.168.27.53",
            "public_ip": "18.204.44.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0206db52918fbddc3",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2f5b30a480df8ed",
            "tags": {
              "Name": "NODE0"
            },
            "tags_all": {
              "Name": "NODE0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da937036e190e798"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d425805aef71788",
            "arn": "arn:aws:ec2:us-east-1:038157383258:instance/i-0c71e318e09c3ecae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c71e318e09c3ecae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a088ba508c97a4b8",
            "private_dns": "ip-192-168-32-165.ec2.internal",
            "private_ip": "192.168.32.165",
            "public_ip": "100.26.101.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0353b77821b1f9aaf",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079001b42c98a1bf6",
            "tags": {
              "Name": "NODE1"
            },
            "tags_all": {
              "Name": "NODE1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da937036e190e798"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d425805aef71788",
            "arn": "arn:aws:ec2:us-east-1:038157383258:instance/i-08462b1b15767f5f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08462b1b15767f5f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f553def84de03bfd",
            "private_dns": "ip-192-168-63-85.ec2.internal",
            "private_ip": "192.168.63.85",
            "public_ip": "54.83.110.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-00a3506a16aa5255c",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9c0b253e10af931",
            "tags": {
              "Name": "NODE2"
            },
            "tags_all": {
              "Name": "NODE2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da937036e190e798"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d425805aef71788",
            "arn": "arn:aws:ec2:us-east-1:038157383258:instance/i-0b2fb4bbe9ffa255f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2fb4bbe9ffa255f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04c425a0babb8af19",
            "private_dns": "ip-192-168-79-11.ec2.internal",
            "private_ip": "192.168.79.11",
            "public_ip": "34.201.123.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-00cd3b940a1769ded",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cb178ca476b3dc4",
            "tags": {
              "Name": "NODE3"
            },
            "tags_all": {
              "Name": "NODE3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da937036e190e798"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d425805aef71788",
            "arn": "arn:aws:ec2:us-east-1:038157383258:instance/i-0695aa2260a041d57",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0695aa2260a041d57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fab0c65392397a23",
            "private_dns": "ip-192-168-89-63.ec2.internal",
            "private_ip": "192.168.89.63",
            "public_ip": "35.174.176.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0f138b139ebd07539",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098256c395e13cdaa",
            "tags": {
              "Name": "NODE4"
            },
            "tags_all": {
              "Name": "NODE4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da937036e190e798"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux_ami",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d425805aef71788",
            "arn": "arn:aws:ec2:us-east-1:038157383258:instance/i-099a5d8055abd634e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099a5d8055abd634e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050c60aa8ec10f28f",
            "private_dns": "ip-192-168-103-250.ec2.internal",
            "private_ip": "192.168.103.250",
            "public_ip": "100.24.118.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0a2489625447f6a73",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0774b9c68eb0b5217",
            "tags": {
              "Name": "NODE5"
            },
            "tags_all": {
              "Name": "NODE5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0da937036e190e798"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazonlinux_ami",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038157383258:internet-gateway/igw-0c999af740051551f",
            "id": "igw-0c999af740051551f",
            "owner_id": "038157383258",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-00d698d43e17f0f2b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038157383258:route-table/rtb-043556c3170bcba9e",
            "id": "rtb-043556c3170bcba9e",
            "owner_id": "038157383258",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c999af740051551f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Xablau"
            },
            "tags_all": {
              "Name": "Route Table Xablau"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d698d43e17f0f2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038157383258:security-group/sg-04a038d329097c6b7",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-04a038d329097c6b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgweb",
            "name_prefix": "",
            "owner_id": "038157383258",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgweb"
            },
            "tags_all": {
              "Name": "sgweb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d698d43e17f0f2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038157383258:subnet/subnet-0b2f5b30a480df8ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.16.0/20",
            "id": "subnet-0b2f5b30a480df8ed",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038157383258",
            "vpc_id": "vpc-00d698d43e17f0f2b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038157383258:subnet/subnet-079001b42c98a1bf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.32.0/20",
            "id": "subnet-079001b42c98a1bf6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038157383258",
            "vpc_id": "vpc-00d698d43e17f0f2b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038157383258:subnet/subnet-0a9c0b253e10af931",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.48.0/20",
            "id": "subnet-0a9c0b253e10af931",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038157383258",
            "vpc_id": "vpc-00d698d43e17f0f2b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038157383258:subnet/subnet-00cb178ca476b3dc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.64.0/20",
            "id": "subnet-00cb178ca476b3dc4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038157383258",
            "vpc_id": "vpc-00d698d43e17f0f2b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038157383258:subnet/subnet-098256c395e13cdaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "192.168.80.0/20",
            "id": "subnet-098256c395e13cdaa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038157383258",
            "vpc_id": "vpc-00d698d43e17f0f2b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": "5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038157383258:subnet/subnet-0774b9c68eb0b5217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.96.0/20",
            "id": "subnet-0774b9c68eb0b5217",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "038157383258",
            "vpc_id": "vpc-00d698d43e17f0f2b"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:038157383258:vpc/vpc-00d698d43e17f0f2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-071ebff1b3b411ad2",
            "default_route_table_id": "rtb-07bdc7472dc621e35",
            "default_security_group_id": "sg-0da937036e190e798",
            "dhcp_options_id": "dopt-059291251ad9a308b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00d698d43e17f0f2b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07bdc7472dc621e35",
            "owner_id": "038157383258"
          }
        }
      ]
    }
  ]
}